@@ -49,9 +49,19 @@ namespace TAO
 
 #if defined (TAO_HAS_MONITOR_POINTS) && (TAO_HAS_MONITOR_POINTS == 1)
     ACE_NEW (this->purge_monitor_,
-             ACE::Monitor_Control::Size_Monitor ("Connection_Cache_Purge"));
+             ACE::Monitor_Control::Size_Monitor);
     ACE_NEW (this->size_monitor_,
-             ACE::Monitor_Control::Size_Monitor ("Connection_Cache_Size"));
+             ACE::Monitor_Control::Size_Monitor);
+             
+    ACE_CString purge_name ("Connection_Cache_Purge_");
+    ACE_CString size_name ("Connection_Cache_Size_");
+    
+    purge_name += orb_core.orbid ();
+    size_name += orb_core.orbid ();
+    
+    this->purge_monitor_->name (purge_name.c_str ());
+    this->size_monitor_->name (size_name.c_str ());
+    
     this->purge_monitor_->add_to_registry ();
     this->size_monitor_->add_to_registry ();
 #endif /* TAO_HAS_MONITOR_POINTS==1 */
